syntax = "proto3";

package matches;

service MatchesRPCService {
  rpc getTeamsMatches (GetTeamsMatchesParams) returns (TeamsMatchesResponse);
  rpc getPlayersMatches (GetPlayersMatchesParams) returns (PlayersMatchesResponse);
}

message GetTeamsMatchesParams {
  repeated string teamIds = 1;
  string environment = 2;
}

message GetPlayersMatchesParams {
  repeated string playerIds = 1;
  string environment = 2;
}

message TeamMatch {
  string teamId = 1;
  int32 wins = 2;
  int32 draws = 3;
  int32 loses = 4;
  int32 goals = 5;
  int32 goalsAgainst = 6;
  int32 goalsDifference = 7;
}

message PlayerMatch {
  string playerId = 1;
  int32 matches = 2;
  int32 goals = 3;
  int32 assists = 4;
}

message TeamsMatchesResponse {
  repeated TeamMatch data = 1;
}

message PlayersMatchesResponse {
  repeated PlayerMatch data = 1;
}

